--- a/static/css/style.css
+++ b/static/css/style.css
@@ -273,7 +273,7 @@ textarea.form__field-input {
 }
 
 .item_title{
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 input {
@@ -377,6 +377,12 @@ button, input {
     align-self: flex-end;
 }
 
+@media (max-width: 1000px){
+    .box{
+        max-width: none !important;
+    }
+}
+
 .box-tiny{
     max-width: 400px;
 }
@@ -401,6 +407,26 @@ button, input {
 .square-tiny{
     max-width: 300px;
     height: 300px;
+}
+
+.info_in_box{
+    width: 100%;
+    padding: 20px 0;
+    height: 100%;
+}
+
+@media (min-width: 300px){
+    .col-sm-3{
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+    .col-sm-9{
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+    .info_in_box{
+        height: 50%;
+    }
 }
 
 .info_bar{
@@ -438,16 +464,8 @@ button, input {
     border-style: solid;
 }
 
-.border-success{
-    border-color: green;
-}
-
-.border-warning{
-    border-color: orange;
-}
-
-.border-danger{
-    border-color: red;
+.border-lg {
+    border: 3px solid;
 }
 
 .team-motto{
