--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,17 @@
       </div>
       {% if current_user.is_creator %}
         <div class="link_menu">
-          <a class="link link-small" onclick="redirectWithStep('/new_tournament')">
+          <a class="link link-small" onclick="redirectWithStep(event)" href="/new_tournament">
             Создать турнир
           </a>
         </div>
       {% endif %}
       {% from 'models_macroses.html' import tour_dates %}
-      {% for tour in tournaments %}
-        <div class="centered_block block_link" onclick="redirect('/tournament/{{tour.id}}')">
+      {% for tour in tournaments | sort(reverse=True, attribute="created_at")%}
+        <div class="centered_block block_link" 
+             onclick="redirect(event);" 
+             href="/tournament/{{tour.id}}"
+        >
           <h2 class="item_title">{{tour.title}}</h2>
           <div class="dates">
             {{tour_dates(tour)}}
