--- a/templates/league.html
+++ b/templates/league.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+  Лига - {{league.title}}
+{% endblock title %}
+
 {% block content %}
 
 <div class="layout">
@@ -18,21 +22,34 @@
       </div>
     {% endif %}
   </div>
-  <div class="page_description box">
-    {{league.description}}
+  <div class="box_container" style="margin-top: 0;">
+    <div class="page_description box">
+      {{league.description}}
+    </div>
   </div>
   <div class="box_container">
-    <div class="box box-large">
+    <div class="box box-tiny">
       <div class="shadow-box__title">
         Команды
       </div>
-      {% for team in league.teams if team.status == 2 %}
-        <div class="centered_block block_link" onclick="redirectWithStep('/team/{{team.id}}')">
+      {% for team in league.teams | sort(reverse=True, attribute="created_at") if team.status == 2 %}
+        <div class="centered_block block_link" 
+             onclick="redirectWithStep(event)" 
+             href="/team/{{team.id}}"
+        >
           <h2 class="item_title">{{team.name}}</h2>
           <div class="description">
             {{team.motto}}
           </div>
         </div>
+      {% endfor %}
+    </div>
+    <div class="box box-large">
+      <div class="shadow-box__title">
+        Игры
+      </div>
+      {% for game in league.games %}
+        <!-- TODO: do games -->
       {% endfor %}
     </div>
   </div>
