--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
               <a class="btn button_success" onclick="redirectWithStep(event);" href="/register">
                 Зарегистрироваться
               </a>
-              <a class="btn button_primary" onclick="redirectWithStep('/login');">
+              <a class="btn button_primary" onclick="redirectWithStep(event)" href="/login">
                 Войти
               </a>
             {% endif %}
