--- a/templates/errors/error401.html
+++ b/templates/errors/error401.html
@@ -5,7 +5,7 @@
 <a class="btn button_success" onclick="redirectWithStep(event);" href="/register">
   Зарегистрироваться
 </a>
-<a class="btn button_primary" onclick="redirectWithStep(event)" href="/login">
+<a class="btn button_primary" onclick="redirectWithStep(event);" href="/login">
   Войти
 </a>
 {% endblock content %}
