back links on league and team pages

--- a/templates/league.html
+++ b/templates/league.html
@@ -12,7 +12,9 @@
       {{league.title}}
     </h1>
     <h5>
-      {{league.tournament.title}}
+      <a href="/tournament/{{league.tournament.id}}">
+        {{league.tournament.title}}
+      </a>
     </h5>
     {% if current_user.id in (1, league.tournament.chief_id, league.chief_id,) %}
       <div class="link_menu">
