--- a/templates/team_request.html
+++ b/templates/team_request.html
@@ -1,4 +1,4 @@
-{% extends 'tournament_editor.html' %}
+{% extends 'base_form.html' %}
 
 {% block head %}
   {{super()}}
@@ -13,7 +13,6 @@
   <form
     class="form form_team"
     method="post"
-    data-remote="true"
     autocomplete="offfff"
   >
     {{form.hidden_tag()}}
