--- a/templates/team.html
+++ b/templates/team.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% from 'models_macroses.html' import team_status, team_league %}
+{% from 'models_macroses.html' import team_status, team_league, formated_datetime %}
 
 {% block title %}
   Команда - {{team.name}}
@@ -20,7 +20,15 @@
       Игры
     </div>
     {% for game in team.games %}
-      <!-- TODO: do games -->
+    <div class="centered_block block_link" 
+         onclick="redirect(event)" 
+         href="/game/{{game.id}}"
+    >
+      <h2 class="item_title">{{game.title}}</h2>
+      <div class="description">
+        {{formated_datetime(game.start)}}
+      </div>
+    </div>
     {% endfor %}
   </div>
   <div class="box box-tiny">
