--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,7 +24,7 @@
     </div>
     <dl class="row info_in_box">
       <dd class="col-sm-3">Город:</dd>
-      <dt class="col-sm-9">{{check_specified(user.place)}}</dt>
+      <dt class="col-sm-9">{{check_specified(user.city)}}</dt>
       <dd class="col-sm-3">Возраст:</dd>
       <dt class="col-sm-9">{{user.years_old}}</dt>
     </dl>
