--- a/templates/league_console.html
+++ b/templates/league_console.html
@@ -145,7 +145,7 @@
           </template>
 
           {% for game in league.games | selectattr("is_deleted", "false")
-                                      | sort(reverse=true, attribute="updated_at") %}
+                                      | sort(reverse=true, attribute="created_at") %}
             <div class="box_item game" id="game-{{game.id}}">
               <label class="box_item-title game-title nested-toggler" for="game_info-{{game.id}}">
                 {{game.team1.name}} — {{game.team2.name}}
