--- a/templates/game_console.html
+++ b/templates/game_console.html
@@ -47,9 +47,9 @@
         </div>
         {% endfor %}
       </div>
-    
+
       {% macro select_players(players, i, player_id=0) %}
-        <select class="custom-select"name="team{{i}}_players">
+        <select class="custom-select" name="team{{i}}_players">
           {% for player in players %}
               <option value="{{player['id']}}" {{'selected' if player['id'] == player_id else ''}}>
                 {{player['fullname']}}
@@ -58,8 +58,8 @@
         </select>
       {% endmacro %}
       {% macro input_points(i, val=0) %}
-        <input type="number" 
-               name="team{{i}}_points" 
+        <input type="number"
+               name="team{{i}}_points"
                value="{{val}}"
                class="points_input"
                min="0"
@@ -69,28 +69,30 @@
       {% set round_types = [(1, '→'), (2, '←'), (3, '⇄'), (4, '⇆')] %}
       <template id="protocol_row_template">
         <tr class="round_form">
-          <td class="row_number">0</td>
+          <td class="row_number symbols">0</td>
           <td class="player">
             {{select_players(game.protocol['teams'][0]['players'], 1)}}
           </td>
-          <td class="points">
+          <td class="points symbols">
             {{input_points(1)}}
           </td>
-          <td><input type="number" name="problem" value="0"></td>
-          <td class="type">
+          <td class="symbols">
+            <input type="number" name="problem" value="0">
+          </td>
+          <td class="type symbols">
             <select name="type">
               {% for val, type in round_types %}
                 <option value="{{val}}">{{type}}</option>
               {% endfor %}
             </select>
           </td>
-          <td class="points">
+          <td class="points symbols">
             {{input_points(2)}}
           </td>
           <td class="player">
             {{select_players(game.protocol['teams'][1]['players'], 2)}}
           </td>
-          <td class="points judge_points">
+          <td class="points judge_points symbols">
             12
           </td>
           <td><textarea name="additional"></textarea></td>
@@ -115,18 +117,18 @@
         {% endif %}
         {% for round in rounds %}
           <tr class="round_form">
-            <td class="row_number">{{loop.index}}</td>
+            <td class="row_number symbols">{{loop.index}}</td>
             <td class="player">
               {{select_players(game.protocol['teams'][0]['players'], 1,
                                round['teams'][0]['player']['id'])}}
             </td>
-            <td class="points">
+            <td class="points symbols">
               {{input_points(1, round['teams'][0]['points'])}}
             </td>
-            <td>
+            <td class="symbols">
               <input type="number" name="problem" value="{{round['problem']}}">
             </td>
-            <td class="type">
+            <td class="type symbols">
               <select name="type">
                 {% for val, type in round_types %}
                   {% if val == round['type'] %}
@@ -137,24 +139,24 @@
                 {% endfor %}
               </select>
             </td>
-            <td class="points">
+            <td class="points symbols">
               {{input_points(2, round['teams'][1]['points'])}}
             </td>
             <td class="player">
               {{select_players(game.protocol['teams'][1]['players'], 2,
                                 round['teams'][1]['player']['id'])}}
             </td>
-            <td class="points judge_points">
+            <td class="points judge_points symbols">
               {{12 - round['teams'][0]['points'] - round['teams'][1]['points']}}
             </td>
             <td><textarea name="additional">{{round['additional']}}</textarea></td>
-          </tr>    
+          </tr>
         {% endfor %}
       </table>
       <div class="d-flex flex-wrap justify-content-between">
         <div class="buttons-menu">
           <button class="btn button_primary add_round">
-            Добавить столбец
+            Добавить строку
           </button>
         </div>
         <div class="buttons-menu">
