--- a/static/css/style.css
+++ b/static/css/style.css
@@ -382,6 +382,7 @@ button, input {
     flex-shrink: unset;
     flex-grow: unset;
     align-self: none;
+    margin: 60px 10px 10px 10px;
 }
 
 @media (max-width: 1000px){
@@ -395,7 +396,7 @@ button, input {
 }
 
 .box-middle{
-    max-width: 550px;
+    max-width: 530px;
 }
 
 .box-large{
@@ -502,6 +503,11 @@ button, input {
     border: none;
     width: 100%;
     box-sizing: border-box;
+    font: inherit;
+}
+
+textarea:disabled, .protocol-table select:not(.custom-select){
+    background: #fff;
 }
 
 .protocol-table textarea{
