--- a/templates/tournament_console.html
+++ b/templates/tournament_console.html
@@ -207,7 +207,7 @@
             <form class="box_item league league_form"
                   id="league_form-"
                   accept-charset="utf-8">
-              <label class="label-bold">Название:</label>
+              <label class="label-bold">Название: *</label>
               <input class="input-wide box_item-title league-title editor-title" 
                     type="text"
                     name="title"
@@ -215,7 +215,7 @@
               />
               <label class="label-bold">Описание:</label>
               <textarea class="input-wide textarea editor-textarea" name="description"></textarea>
-              <label class="label-bold">Главный по лиге:</label>
+              <label class="label-bold">Главный по лиге: *</label>
               <input class="input-wide editor-email" name="chief_email" type="email" required/>
               <div class="buttons-menu">
                 <button class="button button_success" type="submit" name="submit">
