--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,28 @@ button.hidden{
     bottom: 0;
 }
 
+.toast_holder{
+    position: fixed; 
+    z-index: 1060;
+    right: 50px;
+    bottom: 50px;
+    padding: 10px;
+    width: 350px;    
+}
+
+@media only screen and (max-width:500px){
+    .toast_holder{
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        padding: 0;
+    }
+    .toast{
+        width: 100%;
+        max-width: none;
+    }
+}
+
 .link{
     color: blue !important;
 }
